--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "HelpOne - Sistema de HelpDesk | Projeto Integrado Multidisciplinar III",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "node-sass assets/sass/main.scss assets/css/style.css -w"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,9 @@
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.0",
+    "node-sass": "^4.9.0"
   }
 }
