--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "watch:sass": "node-sass assets/sass/main.scss assets/css/style.css -w",
     "devserver": "live-server",
-    "start": "npm-run-all --parallel devserver watch:sass"
+    "start": "npm-run-all --parallel devserver watch:sass",
+    
+    "compile:sass": "node-sass assets/sass/main.scss assets/css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' assets/css/style.comp.css -o assets/css/style.prefix.css",
+    "compress:css": "node-sass assets/css/style.prefix.css assets/css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "repository": {
     "type": "git",
@@ -24,8 +29,13 @@
     "popper.js": "^1.14.3"
   },
   "devDependencies": {
+    "autoprefixer": "^9.1.5",
+    "concat": "^1.0.3",
     "live-server": "^1.2.0",
     "node-sass": "^4.9.0",
-    "npm-run-all": "^4.1.3"
+    "live-server": "^1.2.0",
+    "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.3",
+    "postcss-cli": "^6.0.0"
   }
 }
